# kdevelop

buildtools/managers/cmake/tests/: cmake_ifast_test.cpp
languages/cpp/cppduchain/: contextbuilder.cpp
languages/cpp/parser/: CMakeLists.txt  ast.cpp  ast.h  default_visitor.cpp  default_visitor.h  dumptree.cpp  mergedvisitor.cpp  mergedvisitor.h  parser.cpp  parser.h  prettyprintvisitor.cpp  prettyprintvisitor.h  tokens.cpp  tokens.h  visitor.cpp  visitor.h  xmlwritervisitor.cpp  xmlwritervisitor.h
languages/cpp/parser/ast-view/: CMakeLists.txt  dommodel.cpp  dommodel.h  main.cpp  mainwindow.cpp  mainwindow.h
languages/cpp/parser/rpp/: preprocessor.cpp
languages/cpp/parser/shell/: CMakeLists.txt  main.cpp
languages/cpp/parser/tests/: CMakeLists.txt  test_xmlwritervisitor.cpp
languages/cpp/parser/transform/: astmanipulator.cpp  astmanipulator.h  astmerger.cpp  astmerger.h  transformdescriptionparser.cpp  transformdescriptionparser.h
languages/cpp/transform/: astmanipulator.h  astmerger.h  cpptransformjob.h
plugins/: CMakeLists.txt
